<resources>
    <string name="app_name">ArtCab</string>
    <string name="networks">Networks</string>
    <string name="ideas">Ideas</string>
    <string name="profile">Profile</string>
    <string name="jobs">Jobs</string>
    <string name="studios">Studios</string>
    <string name="welcome">Welcome to ArtCab</string>
    <string name="register">Become a Member</string>
    <string name="login">Already a Member</string>
    <string name="choose">Tap to select one or more</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string-array name="genres">
        <item>Comedy</item>
        <item>Drama</item>
        <item>Action</item>
        <item>Tragedy</item>
        <item>Thriller</item>
        <item>Horror</item>
        <item>Noir</item>
        <item>Experimental</item>
        <item>Romance</item>
        <item>Adventure</item>
        <item>Documentary</item>
        <item>Animation</item>
        <item>Silent</item>
    </string-array>
</resources>
