<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_nav_network"
        android:icon="@drawable/network_icon"
        android:title="@string/networks" />

    <item
        android:id="@+id/bottom_nav_idea"
        android:icon="@drawable/idea_icon"
        android:title="@string/ideas" />

    <item
        android:id="@+id/bottom_nav_jobs"
        android:icon="@drawable/jobs_icon"
        android:title="@string/jobs" />

    <item
        android:id="@+id/bottom_nav_studio"
        android:icon="@drawable/studio_icon"
        android:title="@string/studios" />

    <item
        android:id="@+id/bottom_nav_profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile" />

</menu>